--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titulo do site</title>
+    <title></title>
 </head>
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 01</p>
+            <h2>Curso de html5 com css3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia accusamus numquam laboriosam ut explicabo mollitia nemo voluptatem, aspernatur, consectetur a eius sequi quisquam dolore, dolores quis iure labore alias magni.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 02</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam fugiat, accusamus perspiciatis quisquam debitis voluptas voluptatibus inventore rem possimus officiis ipsam corporis soluta consequuntur officia cumque non, veniam molestias dolores!</p>
         </article>
     </main>
 </body>
