--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de html5 com css3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia accusamus numquam laboriosam ut explicabo mollitia nemo voluptatem, aspernatur, consectetur a eius sequi quisquam dolore, dolores quis iure labore alias magni.</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam fugiat, accusamus perspiciatis quisquam debitis voluptas voluptatibus inventore rem possimus officiis ipsam corporis soluta consequuntur officia cumque non, veniam molestias dolores!</p>
+            <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
